--- a/core-papers/style.css
+++ b/core-papers/style.css
@@ -79,6 +79,11 @@ body{
     background-color: purple;
     width: calc(100% / 9 - 5px);
 }
+.Keyboard button[disabled]{
+    opacity: 0.6;
+    pointer-events: none;
+}
+
 .Keyboard button:hover{
     background-color: palevioletred;
 }
@@ -114,7 +119,7 @@ body{
 .play-again:hover{
     background-color: white;
 }
-.alignment{
+._alignment{
     font-size: 35px;
     line-height: 3rem;
     color: purple;
@@ -147,9 +152,8 @@ body{
 .right-arrow img{
     height: 50px;
     width: 50px;
-}
-.right-arrow{
-    padding-top: 550px;
+    margin-top: 30px;
+    margin-left: 690px;
 }
 .front-page{
     display: flex;
@@ -197,4 +201,21 @@ body{
         align-items: center;
         margin-left: 30%;
     }
+    ._alignment{
+        padding: 1%;
+        align-items: center;
+        width: 400px;
+    }
+    .alignment{
+        font-size: 25px;
+        line-height: 2.5rem;
+        color: purple;
+        width: 400px;
+    }
+    .right-arrow img{
+        height: 50px;
+        width: 50px;
+        margin-left: 80%;
+    }
+    
 }
