--- a/core-papers/style.css
+++ b/core-papers/style.css
@@ -164,17 +164,41 @@ body{
     width: 850px;
     position: relative;
 }
-.front-page button img{
-    height: 100px;
-    width: 100px ;
-}
 .front-page button{
+    height: 40px;
+    width: 130px ;
     position: absolute;
-    height: 100px;
-    width: 100px;
-    top: 550px;
+    top: 570px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    border-radius: 10px;
+    left: 46.2%;
+    font-weight: bolder;
+    font-size: 20px;
 }
+.front-page button:hover{
+    background-color: yellow;
+}
+.button0{
+    height: 100px;
+    width: 800px;
+    display: flex;
+    justify-content: space-around;
+}
+.button0 button{
+    height: 50px;
+    width: 150px;
+    border-radius: 20px;
+    background: purple;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 25px;
+}
+.button0 button:hover{
+    background-color: white;
+    color: black;
+}
+
+
 
 @media(max-width: 782px){
     .container{
@@ -217,5 +241,29 @@ body{
         width: 50px;
         margin-left: 80%;
     }
-    
+    .front-page img{
+        height: 550px;
+        width: 320px;
+        position: relative;
+    }
+    .front-page button{
+        height: 30px;
+        width: 100px ;
+        position: absolute;
+        top: 500px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+        border-radius: 10px;
+        left: 35%;
+        font-weight:bold;
+        font-size: 20px;
+    }
+    .button0{
+        height: 600px;
+        width: 400px;
+        display: grid;
+        grid-template-rows: repeat(3, 80px);
+        align-items: center;
+        justify-content: center;
+        margin-top: 40%;
+    }
 }
